// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linting should display rule documentation links when one is available 1`] = `
Array [
  Object {
    "code": "plugin/foo-bar",
    "message": "Bar (plugin/foo-bar)",
    "range": Object {
      "end": Object {
        "character": 6,
        "line": 0,
      },
      "start": Object {
        "character": 5,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
  Object {
    "code": "color-no-invalid-hex",
    "codeDescription": Object {
      "href": "https://stylelint.io/user-guide/rules/color-no-invalid-hex",
    },
    "message": "Unexpected invalid hex color \\"#y3\\" (color-no-invalid-hex)",
    "range": Object {
      "end": Object {
        "character": 12,
        "line": 6,
      },
      "start": Object {
        "character": 11,
        "line": 6,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
  Object {
    "code": "indentation",
    "codeDescription": Object {
      "href": "https://stylelint.io/user-guide/rules/indentation",
    },
    "message": "Expected indentation of 4 spaces (indentation)",
    "range": Object {
      "end": Object {
        "character": 3,
        "line": 2,
      },
      "start": Object {
        "character": 2,
        "line": 2,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`Linting should lint CSS documents 1`] = `
Array [
  Object {
    "code": "indentation",
    "codeDescription": Object {
      "href": "https://stylelint.io/user-guide/rules/indentation",
    },
    "message": "Expected indentation of 4 spaces (indentation)",
    "range": Object {
      "end": Object {
        "character": 3,
        "line": 2,
      },
      "start": Object {
        "character": 2,
        "line": 2,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;
